--- a/CreationModel.ipynb
+++ b/CreationModel.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "id": "3d1968e5",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
     "        out = self.linear_4(out)\n",
     "        out = F.relu(out)\n",
     "        logits = self.linear_out(out)\n",
-    "        probas = F.log_softmax(logits, dim=1)\n",
+    "        probas = F.softmax(logits, dim=1)\n",
     "        return logits, probas\n",
     "\n",
     "    \n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "id": "24d69b4c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "id": "ae28477f",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "id": "a05e096b",
    "metadata": {},
    "outputs": [
@@ -190,35 +190,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 001/010 | Batch 000/001 | Cost: 0.6929\n",
-      "Epoch: 001/010 training accuracy: 50.00%\n",
+      "Epoch: 001/010 | Batch 000/001 | Cost: 0.0395\n",
+      "Epoch: 001/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 002/010 | Batch 000/001 | Cost: 0.7421\n",
-      "Epoch: 002/010 training accuracy: 50.00%\n",
+      "Epoch: 002/010 | Batch 000/001 | Cost: 0.0155\n",
+      "Epoch: 002/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 003/010 | Batch 000/001 | Cost: 5.2499\n",
-      "Epoch: 003/010 training accuracy: 50.00%\n",
+      "Epoch: 003/010 | Batch 000/001 | Cost: 0.0055\n",
+      "Epoch: 003/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 004/010 | Batch 000/001 | Cost: 0.7686\n",
-      "Epoch: 004/010 training accuracy: 50.00%\n",
+      "Epoch: 004/010 | Batch 000/001 | Cost: 0.0019\n",
+      "Epoch: 004/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 005/010 | Batch 000/001 | Cost: 0.7103\n",
-      "Epoch: 005/010 training accuracy: 50.00%\n",
+      "Epoch: 005/010 | Batch 000/001 | Cost: 0.0008\n",
+      "Epoch: 005/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 006/010 | Batch 000/001 | Cost: 0.7118\n",
-      "Epoch: 006/010 training accuracy: 50.00%\n",
+      "Epoch: 006/010 | Batch 000/001 | Cost: 0.0002\n",
+      "Epoch: 006/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 007/010 | Batch 000/001 | Cost: 0.7073\n",
-      "Epoch: 007/010 training accuracy: 50.00%\n",
+      "Epoch: 007/010 | Batch 000/001 | Cost: 0.0000\n",
+      "Epoch: 007/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 008/010 | Batch 000/001 | Cost: 0.7080\n",
-      "Epoch: 008/010 training accuracy: 50.00%\n",
+      "Epoch: 008/010 | Batch 000/001 | Cost: 0.0000\n",
+      "Epoch: 008/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 009/010 | Batch 000/001 | Cost: 0.7074\n",
-      "Epoch: 009/010 training accuracy: 50.00%\n",
+      "Epoch: 009/010 | Batch 000/001 | Cost: 0.0000\n",
+      "Epoch: 009/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
-      "Epoch: 010/010 | Batch 000/001 | Cost: 0.7057\n",
-      "Epoch: 010/010 training accuracy: 50.00%\n",
+      "Epoch: 010/010 | Batch 000/001 | Cost: 0.0000\n",
+      "Epoch: 010/010 training accuracy: 100.00%\n",
       "temps passé: 0.00 min\n",
       "Duree total de l'entrainement: 0.00 min\n",
       "Sauvegarde du modèle\n"
@@ -235,7 +235,6 @@
     "        \n",
     "        features = features.to(device)\n",
     "        targets = targets.to(device)\n",
-    "                \n",
     "        ### FORWARD AND BACK PROP\n",
     "        logits, probas = model(features)\n",
     "\n",
@@ -268,6 +267,38 @@
     "print(\"Sauvegarde du modèle\")\n",
     "torch.save(model.state_dict(),os.path.join('Save_network', 'model'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "fae1b9bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 26])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.from_numpy(np.array([[-0.5232, -0.5232, -0.5232, -0.5232, -0.5232, -0.5232, -0.5232, -0.5232,\n",
+    "         -0.5232, -0.5232, -0.5232, -0.5232,  0.7135,  3.1869,  0.7135, -0.5232,\n",
+    "          0.7135, -0.5232, -0.5232, -0.5232, -0.5232, -0.5232,  1.9502,  1.9502,\n",
+    "          0.7135, -0.5232]])).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425bb9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
